force-app/main/default/objects/Account/fields/cb__c.field-meta.xml
<CustomField>
    <fullName>cb__c</fullName>
    <label>cb</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>