force-app/main/default/objects/Account/fields/ck7__c.field-meta.xml
<CustomField>
    <fullName>ck7__c</fullName>
    <externalId>true</externalId>
    <label>ck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>