force-app/main/default/objects/Account/fields/gm__c.field-meta.xml
<CustomField>
    <fullName>gm__c</fullName>
    <externalId>true</externalId>
    <label>gm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>