force-app/main/default/objects/Account/fields/Graduation_marks_card__c.field-meta.xml
<CustomField>
    <fullName>Graduation_marks_card__c</fullName>
    <label>Graduation marks card</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>