force-app/main/default/objects/Account/fields/km__c.field-meta.xml
<CustomField>
    <fullName>km__c</fullName>
    <externalId>true</externalId>
    <label>km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>