force-app/main/default/objects/Account/fields/m_nn__c.field-meta.xml
<CustomField>
    <fullName>m_nn__c</fullName>
    <externalId>true</externalId>
    <label>m,nn,</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>