force-app/main/default/objects/Account/fields/mnk__c.field-meta.xml
<CustomField>
    <fullName>mnk__c</fullName>
    <externalId>true</externalId>
    <label>mnk</label>
    <type>Email</type>
</CustomField>