force-app/main/default/objects/Account/fields/nv__c.field-meta.xml
<CustomField>
    <fullName>nv__c</fullName>
    <label>nv</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>