force-app/main/default/objects/Account/fields/yhgu__c.field-meta.xml
<CustomField>
    <fullName>yhgu__c</fullName>
    <externalId>true</externalId>
    <label>yhgu</label>
    <length>6</length>
    <type>Text</type>
</CustomField>