force-app/main/default/objects/Account/recordTypes/abc.recordType-meta.xml
<RecordType>
    <fullName>abc</fullName>
    <active>true</active>
    <label>abc</label>
</RecordType>